feat(ecc): set workflow, cluster-profile and envs

--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
@@ -8,8 +8,9 @@ metadata:
 spec:
   ciOperator:
     workflow:
-      clusterProfile: ""
-      env: null
+      clusterProfile: aws
+      env:
+        foo: bar
       name: test-workflow
 status:
   conditions:
