--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
@@ -5,10 +5,17 @@ metadata:
   resourceVersion: "1000"
 spec:
   ciOperator:
-    workflow:
-      clusterProfile: ""
-      env: null
-      name: test-workflow
+    releases:
+      initial:
+        integration:
+          name: "4.17"
+          namespace: ocp
+      latest:
+        integration:
+          name: "4.17"
+          namespace: ocp
+    test:
+      workflow: test-workflow
 status:
   conditions:
   - lastTransitionTime: "2025-04-02T12:12:12Z"
