--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Invalid_ci_operator_configuration.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Invalid_ci_operator_configuration.yaml
@@ -5,21 +5,12 @@ metadata:
   resourceVersion: "1000"
 spec:
   ciOperator:
-    releases:
-      initial:
-        integration:
-          name: "4.17"
-          namespace: ocp
-      latest:
-        integration:
-          name: "4.17"
-          namespace: ocp
     test:
       workflow: test-workflow
 status:
   conditions:
   - lastTransitionTime: "2025-04-02T12:12:12Z"
-    message: 'create prowjob: fake err'
+    message: 'generate ci-operator config: releases stanza not set'
     reason: CIOperatorJobsGenerateFailure
     status: "False"
     type: ClusterProvisioning
