--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_pj_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_pj_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
@@ -9,7 +9,7 @@ items:
     labels:
       ci-operator.openshift.io/cloud: aws
       ci-operator.openshift.io/cloud-cluster-profile: aws
-      ci.openshift.io/ephemeral-cluster-name: ""
+      ci.openshift.io/ephemeral-cluster: ec
       created-by-prow: "true"
       event-GUID: no-event-guid
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
@@ -88,9 +88,9 @@ items:
                   from: cli
                   resources:
                     limits:
-                      memory: 400Mi
+                      memory: 100Mi
                     requests:
-                      cpu: 200m
+                      cpu: 10m
                 workflow: test-workflow
             zz_generated_metadata:
               branch: branch
