--- a/test/integration/ci-operator-prowgen/output/jobs/sharded/repo/sharded-repo-main-presubmits.yaml
+++ b/test/integration/ci-operator-prowgen/output/jobs/sharded/repo/sharded-repo-main-presubmits.yaml
@@ -19,7 +19,7 @@ presubmits:
       - args:
         - --gcs-upload-secret=/secrets/gcs/service-account.json
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-        - --multi-stage-param="SHARD_ARGS=--shard-count 3 --shard-id 1"
+        - --multi-stage-param=SHARD_ARGS="--shard-count 3 --shard-id 1"
         - --report-credentials-file=/etc/report/credentials
         - --target=e2e-test
         command:
@@ -74,7 +74,7 @@ presubmits:
       - args:
         - --gcs-upload-secret=/secrets/gcs/service-account.json
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-        - --multi-stage-param="SHARD_ARGS=--shard-count 3 --shard-id 2"
+        - --multi-stage-param=SHARD_ARGS="--shard-count 3 --shard-id 2"
         - --report-credentials-file=/etc/report/credentials
         - --target=e2e-test
         command:
@@ -129,7 +129,7 @@ presubmits:
       - args:
         - --gcs-upload-secret=/secrets/gcs/service-account.json
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-        - --multi-stage-param="SHARD_ARGS=--shard-count 3 --shard-id 3"
+        - --multi-stage-param=SHARD_ARGS="--shard-count 3 --shard-id 3"
         - --report-credentials-file=/etc/report/credentials
         - --target=e2e-test
         command:
