--- a/test/e2e/simple/dynamic-releases.yaml
+++ b/test/e2e/simple/dynamic-releases.yaml
@@ -6,34 +6,34 @@ base_images:
 releases:
   initial:
     candidate:
-      product: okd
-      version: "4.10"
+      product: okd-scos
+      version: "4.17"
   latest:
     release:
       channel: stable
-      version: "4.11"
+      version: "4.18"
   custom:
     candidate:
       product: ocp
       architecture: amd64
       stream: nightly
-      version: "4.11"
+      version: "4.18"
       relative: 1
   pre:
     prerelease:
       product: ocp
       version_bounds:
-        lower: "4.10.0"
-        upper: "4.11.0-0"
+        lower: "4.17.0"
+        upper: "4.18.0-0"
   mainframe:
     release:
-      version: "4.11"
+      version: "4.18"
       channel: stable
       architecture: s390x
   assembled:
     integration:
       namespace: ocp
-      name: "4.11"
+      name: "4.18"
 resources:
   '*':
     requests:
