feat(ecc): add ephemeral cluster phases

--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
@@ -26,4 +26,5 @@ status:
   - lastTransitionTime: "2025-04-02T12:12:12Z"
     status: "True"
     type: ClusterProvisioning
+  phase: Provisioning
   prowJobId: foobar
