feat(ecc): improve secret fetching

--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_build01_TestReconcile_Kubeconfig_not_ready.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_build01_TestReconcile_Kubeconfig_not_ready.yaml
@@ -12,6 +12,6 @@
   kind: Secret
   metadata:
     creationTimestamp: null
-    name: wait-test-complete
+    name: cluster-provisioning
     namespace: ci-op-1234
     resourceVersion: "999"
