--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_build01_TestReconcile_Test_completed__secret_exists_do_nothing.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_build01_TestReconcile_Test_completed__secret_exists_do_nothing.yaml
@@ -14,6 +14,6 @@
     creationTimestamp: null
     labels:
       do-not-change: ""
-    name: test-done-keep-going
+    name: test-done-signal
     namespace: ci-op-1234
     resourceVersion: "999"
