--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_build01_TestReconcile_Test_completed__create_secret.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_build01_TestReconcile_Test_completed__create_secret.yaml
@@ -12,6 +12,6 @@
   kind: Secret
   metadata:
     creationTimestamp: null
-    name: test-done-keep-going
+    name: test-done-signal
     namespace: ci-op-1234
     resourceVersion: "1"
