--- a/test/integration/cluster-init/update-build99/expected/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
+++ b/test/integration/cluster-init/update-build99/expected/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
@@ -26,7 +26,7 @@ postsubmits:
             secretKeyRef:
               key: build99-id
               name: build99-dex-oidc
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: quay.io/openshift/ci-public:ci_applyconfig_latest
         imagePullPolicy: Always
         name: ""
         resources:
