Fixed a hard coded account id event bus arn

--- a/hack/reduce_nat_gateway_cost/use-nat-instance-forwarders.yaml
+++ b/hack/reduce_nat_gateway_cost/use-nat-instance-forwarders.yaml
@@ -30,7 +30,7 @@ Resources:
           - Effect: Allow
             Action:
             - events:PutEvents
-            Resource: arn:aws:events:us-east-1:320297955214:event-bus/default
+            Resource: !Sub arn:aws:events:us-east-1:${AWS::AccountId}:event-bus/default
   UseNatInstanceForwardEventRule:
     Type: AWS::Events::Rule
     Properties:
