DPTP-4341: fix output tag references

--- a/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Default_to_dockerfile.yaml
+++ b/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Default_to_dockerfile.yaml
@@ -2,6 +2,8 @@ base_images:
   org_repo_tag:
     name: repo
     namespace: org
+    reference_policy:
+      type: ""
     tag: tag
 images:
 - inputs:
