--- a/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Build_APIs_replacement_is_executed_first.yaml
+++ b/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Build_APIs_replacement_is_executed_first.yaml
@@ -2,6 +2,8 @@ base_images:
   org_repo_latest:
     name: repo
     namespace: org
+    reference_policy:
+      type: ""
     tag: latest
 images:
 - dockerfile_path: dockerfile
