--- a/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Replaces_without_tag.yaml
+++ b/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Replaces_without_tag.yaml
@@ -2,6 +2,8 @@ base_images:
   org_repo_latest:
     name: repo
     namespace: org
+    reference_policy:
+      type: ""
     tag: latest
 images:
 - dockerfile_path: dockerfile
