chore(ecc): introduce ProwJobCreating condition

--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
@@ -25,6 +25,6 @@ status:
   conditions:
   - lastTransitionTime: "2025-04-02T12:12:12Z"
     status: "True"
-    type: ClusterProvisioning
+    type: ProwJobCreating
   phase: Provisioning
   prowJobId: foobar
