--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
@@ -23,5 +23,5 @@ status:
       failed to default namespace'
     reason: CIOperatorJobsGenerateFailure
     status: "False"
-    type: ClusterProvisioning
+    type: ProwJobCreating
   phase: Failed
