Enable rebalancer in autocfgbrancher
Signed-off-by: Jakub Guzik <jguzik@redhat.com>

--- a/images/autoconfigbrancher/Dockerfile
+++ b/images/autoconfigbrancher/Dockerfile
@@ -12,7 +12,7 @@ ADD registry-replacer /usr/bin/registry-replacer
 ADD ci-operator-yaml-creator /usr/bin/ci-operator-yaml-creator
 ADD clusterimageset-updater /usr/bin/clusterimageset-updater
 ADD promoted-image-governor /usr/bin/promoted-image-governor
-#ADD rebalancer /usr/bin/rebalancer TODO: enable when tool merged
+ADD rebalancer /usr/bin/rebalancer
 
 RUN microdnf install -y git && \
     microdnf clean all && \
