--- a/pkg/gsm-secrets/testdata/zz_fixture_bindings_TestGetDesiredState_one_secret_collection.yaml
+++ b/pkg/gsm-secrets/testdata/zz_fixture_bindings_TestGetDesiredState_one_secret_collection.yaml
@@ -13,8 +13,8 @@
   members:
   - group:team-alpha@redhat.com
   - group:team-beta@redhat.com
-  - serviceAccount:collection-alpha-updater@openshift-ci-secrets.iam.gserviceaccount.com
-  role: projects/openshift-ci-secrets/roles/openshift_ci_secrets_viewer
+  - serviceAccount:collection-alpha-updater@test-project.iam.gserviceaccount.com
+  role: projects/test-project/roles/openshift_ci_secrets_viewer
 - condition:
     description: 'Managed by test platform: Create, update, and delete access to secrets
       in collection-alpha collection'
@@ -24,5 +24,5 @@
   members:
   - group:team-alpha@redhat.com
   - group:team-beta@redhat.com
-  - serviceAccount:collection-alpha-updater@openshift-ci-secrets.iam.gserviceaccount.com
-  role: projects/openshift-ci-secrets/roles/openshift_ci_secrets_updater
+  - serviceAccount:collection-alpha-updater@test-project.iam.gserviceaccount.com
+  role: projects/test-project/roles/openshift_ci_secrets_updater
