Add determinize to tide-config-manager
Signed-off-by: Jakub Guzik <jguzik@redhat.com>

--- a/images/tide-config-manager/Dockerfile
+++ b/images/tide-config-manager/Dockerfile
@@ -2,4 +2,6 @@ FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="jguzik@redhat.com"
 
 ADD tide-config-manager /usr/bin/tide-config-manager
+ADD determinize-prow-config /usr/bin/determinize-prow-config
+
 ENTRYPOINT ["/usr/bin/tide-config-manager"]
