chore(tide-config-manager): install diffutils

--- a/images/tide-config-manager/Dockerfile
+++ b/images/tide-config-manager/Dockerfile
@@ -1,6 +1,7 @@
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="jguzik@redhat.com"
 
+RUN dnf install -y diffutils
 ADD tide-config-manager /usr/bin/tide-config-manager
 ADD determinize-prow-config /usr/bin/determinize-prow-config
 
