--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_pj_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_pj_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
@@ -4,7 +4,7 @@ items:
   metadata:
     annotations:
       prow.k8s.io/context: ci/prow/cluster-provisioning
-      prow.k8s.io/job: pull-ci-org-repo-branch-cluster-provisioning
+      prow.k8s.io/job: ephemeralcluster-ci-org-repo-branch-cluster-provisioning
     creationTimestamp: null
     labels:
       ci-operator.openshift.io/cloud: aws
@@ -15,7 +15,7 @@ items:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
       prow.k8s.io/context: cluster-provisioning
       prow.k8s.io/is-optional: "false"
-      prow.k8s.io/job: pull-ci-org-repo-branch-cluster-provisioning
+      prow.k8s.io/job: ephemeralcluster-ci-org-repo-branch-cluster-provisioning
       prow.k8s.io/refs.base_ref: ""
       prow.k8s.io/refs.org: ""
       prow.k8s.io/refs.pull: "0"
@@ -39,7 +39,7 @@ items:
         entrypoint: entrypoint
         initupload: initupload
         sidecar: sidecar
-    job: pull-ci-org-repo-branch-cluster-provisioning
+    job: ephemeralcluster-ci-org-repo-branch-cluster-provisioning
     namespace: ci
     pod_spec:
       containers:
@@ -165,5 +165,5 @@ items:
     type: presubmit
   status:
     startTime: "2025-04-02T12:12:12Z"
-    state: triggered
+    state: scheduling
 metadata: {}
