--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
@@ -7,6 +7,22 @@ metadata:
   resourceVersion: "1000"
 spec:
   ciOperator:
+    baseImages:
+      upi-installer:
+        name: "4.20"
+        namespace: ocp
+        tag: upi-installer
+    buildRoot:
+      image_stream_tag:
+        name: "4.20"
+        namespace: ocp
+        tag: cli
+    externalImages:
+      fedora:
+        name: ""
+        namespace: ""
+        registry: quay.io/fedora/fedora:43
+        tag: ""
     releases:
       initial:
         integration:
@@ -21,6 +37,12 @@ spec:
       env:
         foo: bar
       workflow: test-workflow
+  pullRequest:
+    event: "\n{\n  \"pull_request\": {\n    \"base\": {\n\t  \"repo\": {\n\t    \"name\":
+      \"ci-tools\",\n\t    \"owner\": {\n\t\t  \"login\": \"openshift\"\n\t\t}\n\t
+      \ },\n\t  \"ref\": \"main\",\n\t  \"sha\": \"8f5e7d6ec106ccf86684fcff808d85cac960f0a3\"\n\t}\n
+      \ }\n}"
+    headers: '{"X-Github-Delivery": "aa9ede40-8fbb-11f0-8717-9eed0c1315d0"}'
 status:
   conditions:
   - lastTransitionTime: "2025-04-02T12:12:12Z"
