--- a/pkg/slack/events/helpdesk/testdata/zz_fixture_TestGetContactedHelpdeskResponse_random_botId.yaml
+++ b/pkg/slack/events/helpdesk/testdata/zz_fixture_TestGetContactedHelpdeskResponse_random_botId.yaml
@@ -1,6 +1,6 @@
 - text:
-    text: ':wave: You have reached the Test Platform Help Desk. An assigned engineer
-      will respond in several hours during their working hours.'
+    text: '<@user>  :wave: You have reached the Test Platform Help Desk. An assigned
+      engineer will respond in several hours during their working hours.'
     type: mrkdwn
   type: section
 - text:
