--- a/pkg/gsm-secrets/testdata/zz_fixture_sa_TestGetDesiredState_one_secret_collection.yaml
+++ b/pkg/gsm-secrets/testdata/zz_fixture_sa_TestGetDesiredState_one_secret_collection.yaml
@@ -1,3 +1,5 @@
 - Collection: collection-alpha
-  DisplayName: collection-alpha-sa
-  Email: collection-alpha-sa@test-project.iam.gserviceaccount.com
+  Description: 'Updater service account for secret collection: collection-alpha'
+  DisplayName: collection-alpha
+  Email: collection-alpha-updater@test-project.iam.gserviceaccount.com
+  ID: collection-alpha-updater
