--- a/pkg/gsm-secrets/testdata/zz_fixture_secrets_TestGetDesiredState_basic_config.yaml
+++ b/pkg/gsm-secrets/testdata/zz_fixture_secrets_TestGetDesiredState_basic_config.yaml
@@ -14,22 +14,6 @@ collection-alpha__updater-service-account:
   Payload: null
   ResourceName: ""
   Type: 1
-collection-beta____index:
-  Annotations: null
-  Collection: collection-beta
-  Labels: null
-  Name: collection-beta____index
-  Payload: null
-  ResourceName: ""
-  Type: 2
-collection-beta__updater-service-account:
-  Annotations: null
-  Collection: collection-beta
-  Labels: null
-  Name: collection-beta__updater-service-account
-  Payload: null
-  ResourceName: ""
-  Type: 1
 shared-collection____index:
   Annotations: null
   Collection: shared-collection
@@ -43,6 +27,22 @@ shared-collection__updater-service-account:
   Collection: shared-collection
   Labels: null
   Name: shared-collection__updater-service-account
+  Payload: null
+  ResourceName: ""
+  Type: 1
+some-collection-with-a-very-long-name____index:
+  Annotations: null
+  Collection: some-collection-with-a-very-long-name
+  Labels: null
+  Name: some-collection-with-a-very-long-name____index
+  Payload: null
+  ResourceName: ""
+  Type: 2
+some-collection-with-a-very-long-name__updater-service-account:
+  Annotations: null
+  Collection: some-collection-with-a-very-long-name
+  Labels: null
+  Name: some-collection-with-a-very-long-name__updater-service-account
   Payload: null
   ResourceName: ""
   Type: 1
