--- a/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -264,6 +264,10 @@ secret_configs:
     name: registry-pull-credentials
     namespace: test-credentials
     type: kubernetes.io/dockerconfigjson
+  - cluster: newCluster
+    name: registry-pull-credentials
+    namespace: keel
+    type: kubernetes.io/dockerconfigjson
 - from:
     .dockerconfigjson:
       dockerconfigJSON:
@@ -330,6 +334,10 @@ secret_configs:
   - cluster: build99
     name: registry-pull-credentials
     namespace: test-credentials
+    type: kubernetes.io/dockerconfigjson
+  - cluster: build99
+    name: registry-pull-credentials
+    namespace: keel
     type: kubernetes.io/dockerconfigjson
 - from:
     kubeconfig:
