feat(ecc): report prowjob url

--- a/pkg/api/ephemeralcluster/v1/ci.openshift.io_ephemeralclusters.yaml
+++ b/pkg/api/ephemeralcluster/v1/ci.openshift.io_ephemeralclusters.yaml
@@ -474,6 +474,8 @@ spec:
                 type: string
               prowJobId:
                 type: string
+              prowJobURL:
+                type: string
             required:
             - phase
             type: object
