--- a/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_OAuth_token.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_OAuth_token.yaml
@@ -54,9 +54,8 @@ spec:
       RUN rm -f /oauth-token
     images:
     - from:
-        kind: ImageStreamTag
-        name: clonerefs:latest
-        namespace: ci
+        kind: DockerImage
+        name: quay-proxy.ci.openshift.org/openshift/ci/ci:ci_managed-clonerefs_latest
       paths:
       - destinationDir: .
         sourcePath: /clonerefs
