--- a/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_extra_refs.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_extra_refs.yaml
@@ -52,9 +52,8 @@ spec:
       ENV GOPATH=/go
     images:
     - from:
-        kind: ImageStreamTag
-        name: clonerefs:latest
-        namespace: ci
+        kind: DockerImage
+        name: quay-proxy.ci.openshift.org/openshift/ci/ci:ci_managed-clonerefs_latest
       paths:
       - destinationDir: .
         sourcePath: /clonerefs
